--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
-@tailwind base;
+@import "tailwindcss";
+@plugin './hero.ts';
+
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+/* Note: You may need to change the path to fit your project structure */
+@source '../node_modules/@heroui/theme/dist*.{js,ts,jsx,tsx}';
+@custom-variant dark (&:is(.dark *));
